[project]
name = "abi-templates"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "altair>=5.5.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "plotly>=6.1.0",
    "quarto>=0.1.0",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "vega-datasets>=0.9.0",
]
